--- a/build.gradle
+++ b/build.gradle
@@ -15,3 +15,8 @@ dependencies {
     compile group: 'com.github.briandilley.jsonrpc4j', name: 'jsonrpc4j', version: '1.5.3'
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
+
+task sourcesJar(type: Jar) {
+    from sourceSets.main.allJava
+}
+
