--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,19 @@
 plugins {
     id 'java'
+    id 'maven-publish'
+}
+
+def getVersionName = { ->
+    def stdout = new ByteArrayOutputStream()
+    exec {
+        commandLine 'git', 'describe', '--tags'
+        standardOutput = stdout
+    }
+    return stdout.toString().trim()
 }
 
 group 'ley'
-version '1.0-SNAPSHOT'
-
+version getVersionName()
 sourceCompatibility = 1.8
 
 repositories {
@@ -20,3 +29,24 @@ task sourcesJar(type: Jar) {
     from sourceSets.main.allJava
 }
 
+publishing {
+    publications {
+        maven(MavenPublication) {
+            groupId = project.group
+            artifactId = project.name
+            version = project.version
+            from components.java
+        }
+    }
+
+    repositories {
+        maven {
+            credentials {
+                username = "$usr"
+                password = "$pwd"
+            }
+
+            url = "http://git.tilera.xyz:8002/repository/maven-releases/"
+        }
+    }
+}
